session-persistence/destinationRule-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echo-service-destinationrule
  namespace: default
spec:
  host: echo-service.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "foo"
